kit pane cursor; straight.js fix for relationship map; models aligned with straight.js behavior

--- a/app/public/css/less/_base.less
+++ b/app/public/css/less/_base.less
@@ -30,3 +30,15 @@
 .template {
 	display: none;
 }
+
+.cursor-grab {
+	cursor: move;
+	cursor: -webkit-grab;
+	cursor: -moz-grab;
+}
+
+.cursor-drag {
+	cursor: move;
+	cursor: -webkit-grabbing;
+	cursor: -moz-grabbing;
+}8
