--- a/app/public/css/less/choreo/_choreo_base.less
+++ b/app/public/css/less/choreo/_choreo_base.less
@@ -7,7 +7,7 @@
 @choreo-item-color-selected: #e7cd3b;
 
 @choreo-font-size-normal: 12px;
-@choreo-font-size-small: 8px;
+@choreo-font-size-small: 10px;
 
 ////// jQuery UI overrides ///////
 
